<resources>
    <string name="app_name">PlusConnect</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_chat">Chats</string>
    <string name="action_search">Search</string>
    <string name="action_contacts">Contacts</string>
    <string name="new_user">New User?</string>
    <string name="register">Register</string>
    <string name="start_page1">Make the most from your trusted network of people</string>
    <string name="start_page2">Get business referrals through your trusted network</string>
    <string name="start_page3">Get your work done through trusted network of people</string>
    <string name="start_page4_text1">Start your profile</string>
    <string name="start_page4_text2">Let people and opportunities find you</string>
    <string name="back_btn">Back</string>
    <string name="search_btn">Search</string>
    <string name="overflow_btn">Overflow Menu</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="next_btn">Next</string>
    <string name="noNetworkText">Sorry!  No Network</string>
    <string name="company_name">necto technologies ltd.</string>
    <string name="user_name">Ronald Mitchem</string>
    <string name="last_seen">Last Seen 10:30 AM</string>
    <string name="chat_hint">Message</string>
    <string name="chat_meta_data">28th January 2015</string>
    <string name="chat_received">Ola</string>
    <string name="search_chat">Search Chat</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="activity_chat_list">Chat List</string>
    <string name="activity_broadcast_list_info">Broadcast List Info</string>
    <string name="activity_group_info">Group Info</string>
    <string name="activity_new_broadcast">New Broadcast List</string>
    <string name="activity_new_group">New Group</string>
    <string name="activity_status">Status</string>
    <string name="activity_chat">Chats</string>
    <string name="activity_forward_message">Select Contact</string>
    <string name="activity_new_chat">New Chat</string>
    <string name="activity_video_preview">Send Video</string>
    <string name="activity_image_preview">Send Image</string>
    <string name="activity_search">Search Chat</string>
    <string name="activity_map">Map Activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="description">Media Controls</string>
    <string name="pick_contact">Click to pick contact</string>
    <string name="name">Name :</string>
    <string name="none">None</string>
    <string name="no_contact_found">No Contact Data Found. Please add one using the picker button at top</string>
    <string name="Account">Account</string>
    <string name="UserAccount_Hint">Enter Mobile No/Email Id</string>
    <string name="UserEmail_Hint">Enter Email-id</string>
    <string name="UserMobile_Hint">Enter Mobile-No</string>
    <string name="Password">Password</string>
    <string name="UserPassword_Hint">Enter Password</string>
    <string name="btn_SignIn">Sign In</string>
    <string name="btn_Next">Next</string>
    <string name="btn_Reset">Reset</string>
    <string name="btn_Verify">Verify</string>
    <string name="btn_PhoneCall">Phone Call</string>
    <string name="ForgetPassword">Forget Password?</string>
    <string name="error_pw_Msg">The password you entered is Incorrect. Please try again</string>
    <string name="error_EmailId">The email address is either not registered or verified</string>
    <string name="error_Mobile">The mobile number is either not registered or verified</string>
    <string name="Registered_Email">Enter your registered email address</string>
    <string name="Registered_Mobile">Enter your registered mobile number</string>
    <string name="email_Tip">Please check the message in your mailbox and follow the instruction to reset your password.</string>
    <string name="Mob_Vcode_Sent">The SMS with verification code has been \nsent to your phone number </string>
    <string name="Code">Code</string>
    <string name="Code_Hint">Enter Code</string>
    <string name="SMS_Arrival">SMS should arrive in </string>
    <string name="VCode_NotReceived">No verification code received?</string>
    <string name="Resend_Link">Resend</string>
    <string name="VCode_PhoneCall">If you did not receive your SMS verification message \nwe can tell you your code via phone call</string>
    <string name="New_Password">New Password</string>
    <string name="New_Password_Hint">Enter New Password</string>
    <string name="Confirm_New_Password">Confirm New Password</string>
    <string name="Confirm_New_Password_Hint">Enter Confirmed New Password</string>
    <string name="dialog_PW_Mismatch">The passwords do not match</string>
    <string name="dialog_PW_Match">Your password has been changed</string>
    <string-array name="ResetPassword">
        <item>Reset Password Via Email</item>
        <item>Reset Password Via SMS</item>
    </string-array>
    <string-array name="Send_V_Code">
        <item>Send verification code via SMS</item>
        <item>Send verification code via Phone Call</item>
    </string-array>
    <string name="Region">Region</string>
    <string name="Mobile">Mobile</string>
    <string name="btn_SignUp">Sign Up</string>
    <string name="btn_Submit">Submit</string>
    <string name="btn_Skip">Skip</string>
    <string name="Email">Email</string>
    <string name="Terms_and_Cond">By signing up, I agree to the Terms of Services and Privacy Policy</string>
    <string name="error_alredyReg">Mobile no. or email Id is already registered</string>
    <string name="error_validMobileNo">Please enter valid mobile number</string>
    <string name="error_validEmail">Please enter valid email id</string>
    <string name="error_validPwd">Please enter valid password</string>
    <string name="dialog_VCode">The verification code will be sent to your given mobile number. If you\'d like to change your mobile number, email or password, please select edit</string>
    <string name="workTpe_Tip">Select most appropriate options applicable\nto you. You would be able to change the selected option later under Setting page.</string>
    <string name="first_Name">First Name</string>
    <string name="last_Name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="edt_hint_Required">Required</string>
    <string name="select_Group">Select your Group</string>
    <string name="select_Industry">Select your Industry</string>
    <string name="five_Skills">You can add upto five skills and expertise</string>
    <string name="skill_1">Skill one*</string>
    <string name="skill_2">Skill two</string>
    <string name="skill_3">Skill three</string>
    <string name="skill_4">Skill four</string>
    <string name="skill_5">Skill five</string>
    <string-array name="Work_Type">
        <item>Employee of the company</item>
        <item>Seeking Job</item>
        <item>Self Employee</item>
        <item>FreeLancer/Contarctor</item>
        <item>Enterprenuer</item>
        <item>Student</item>
        <item>Housewife</item>
        <item>Retired</item>
    </string-array>
    <string-array name="Work_Group">
        <item>Agriculture</item>
        <item>Arts</item>
        <item>Construction</item>
        <item>Consumer Goods</item>
        <item>Coporate</item>
        <item>Educational</item>
        <item>Finance</item>
        <item>Government</item>
        <item>High Tech</item>
        <item>Legal</item>
        <item>Media</item>
        <item>Medical</item>
        <item>Non-profit</item>
        <item>Recreational</item>
        <item>Service</item>
        <item>Transportation</item>
    </string-array>
    <string-array name="Agriculture_industries">
        <item>Dairy</item>
        <item>Farming</item>
        <item>Fishery</item>
        <item>Growing of Food</item>
        <item>Poultry</item>
        <item>Ranching</item>
    </string-array>
    <string-array name="Arts_industries">
        <item>Animation</item>
        <item>Arts and Crafts</item>
        <item>Design</item>
        <item>Fine Art</item>
        <item>Graphic Design</item>
        <item>Motion Pictures &amp; Film</item>
        <item>Museums and Institutions</item>
        <item>Music</item>
        <item>Performing Arts</item>
        <item>Photography</item>
        <item>Writing &amp; Editing</item>
    </string-array>
    <string-array name="Construction_industries">
        <item>Architecture &amp; Planning</item>
        <item>Building Materials</item>
        <item>Civil Engineering</item>
        <item>Commercial Real Estate</item>
        <item>Construction</item>
        <item>Glass,Ceramics &amp; Concrete</item>
        <item>Industrial Automation</item>
        <item>Real Estate</item>
    </string-array>
    <string-array name="ConsumerGoods_industries">
        <item>Apparel &amp; Fashion</item>
        <item>Consumer Electronics</item>
        <item>Consumer Goods</item>
        <item>Cosmetics</item>
        <item>Electrical/Electronic Manufactoring</item>
        <item>Food Production</item>
        <item>Furniture</item>
        <item>Import &amp; Export</item>
        <item>Luxury Goods &amp; Jewelry</item>
        <item>Packaging &amp; Containers</item>
        <item>Real Estate</item>
        <item>Retail</item>
        <item>Sporting Goods</item>
        <item>Supermarkets</item>
        <item>Tobacco</item>
        <item>Wholesale</item>
        <item>Wine &amp; Spirits</item>
    </string-array>
    <string-array name="Corporate_industries">
        <item>Business Supplies &amp; Equipment</item>
        <item>Commercial Real Estate</item>
        <item>Events Services</item>
        <item>Facilities Services</item>
        <item>Human Resources</item>
        <item>Import &amp; Export</item>
        <item>Logistics &amp; Supply Chain</item>
        <item>Management Consulting</item>
        <item>Market Research</item>
        <item>Marketing &amp; Advertising</item>
        <item>Outsourcing/Offshoring</item>
        <item>Professional Training &amp; Coach</item>
        <item>Program Development </item>
        <item>Security &amp; Investigations</item>
        <item>Staffing and Recruiting</item>
    </string-array>
    <string-array name="Educational_industries">
        <item>Education</item>
        <item>Education Management</item>
        <item>E-Learning</item>
        <item>Higher Education</item>
        <item>Primary/Secondary Education</item>
        <item>Research</item>
    </string-array>
    <string-array name="Finance_industries">
        <item>Accounting</item>
        <item>Banking</item>
        <item>Capital Markets</item>
        <item>Commercial Real Estate</item>
        <item>Financial Services</item>
        <item>Insurance</item>
        <item>Investment Banking</item>
        <item>Investment Management</item>
        <item>Mutual Fund</item>
        <item>Real Estate</item>
        <item>Venture Capital &amp; Private Equity</item>
    </string-array>
</resources>