<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.login_registration.ui.login.Login"
    android:background="@color/windowBackground">

    <include
        android:id="@+id/header"
        layout="@layout/activity_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/metrics_58" />

    <View
        android:id="@+id/header_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/metrics_4"
        android:layout_below="@id/header"
        android:background="@drawable/toolbar_shadow_view"/>

    <!-- Login Form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_shadow"
        android:orientation="vertical"
        android:padding="@dimen/metrics_16">

        <!--  Email Label Text View -->
        <TextView
            style="@style/SmallLabelTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/metrics_16"
            android:text="@string/Account" />

        <!--  Email Label Edit Text -->
        <EditText
            android:id="@+id/etAccount"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UserAccount_Hint"
            android:singleLine="true" />

        <!--  Password Label Text View -->
        <TextView
            style="@style/SmallLabelTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password" />

        <!--  Password Label Edit Text -->
        <EditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UserPassword_Hint"
            android:singleLine="true" />

        <!-- Sign Up button with Blue color and text color white-->
        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/btn_SignIn"
            style="@style/Blue_button_small" />

        <!-- Forget Password Text View opens the Pop Up Window -->
        <TextView
            android:id="@+id/txtForgetPasswd"
            style="@style/SmallLabelTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/metrics_16"
            android:gravity="center"
            android:text="@string/ForgetPassword"/>

    </LinearLayout>

</RelativeLayout>
