<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        tools:context="com.login_registration.ui.registration.SkillsAndExpertise">

    <!--Header-->
    <include
        android:id="@+id/header"
        layout="@layout/activity_header"
        android:layout_width="match_parent"
        android:layout_height="58dp" />

    <View
        android:id="@+id/header_shadow"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@+id/header"
        android:background="@drawable/toolbar_shadow_view" />

        <ScrollView
            android:id="@+id/mainScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header_shadow">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <View
                    style="@style/ViewLine_Style"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/txtGroup"
                    style="@style/MediumLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/metrics_8"
                    android:text="@string/select_Group"/>
                <View
                    style="@style/ViewLine_Style"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/txtIndustry"
                    style="@style/MediumLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/metrics_8"
                    android:text="@string/select_Industry"/>

                <View
                    style="@style/ViewLine_Style"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />




                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/five_Skills"
                    android:layout_marginTop="@dimen/metrics_50"
                    android:textAppearance="@style/SmallLabelMultilineTextStyle"
                    android:textColor="#a3a3a3" />

                <EditText
                    android:id="@+id/skillA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/skill_1"
                    android:textAppearance="@style/EditTextStyle"
                    android:layout_marginTop="15dp"/>

                <EditText
                    android:id="@+id/skillB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/skill_2"
                    android:textAppearance="@style/EditTextStyle"
                    android:layout_marginTop="15dp"/>

                <EditText
                    android:id="@+id/skillC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/skill_3"
                    android:textAppearance="@style/EditTextStyle"
                    android:layout_marginTop="15dp"/>


                <EditText
                    android:id="@+id/skillD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/skill_4"
                    android:textAppearance="@style/EditTextStyle"
                    android:layout_marginTop="15dp"/>


                <EditText
                    android:id="@+id/skillE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/skill_5"
                    android:textAppearance="@style/EditTextStyle"
                    android:layout_marginTop="15dp"/>

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/skillE"
                    android:text="@string/btn_Submit"
                    style="@style/Blue_button_small" />
            </LinearLayout>

            <!-- Login buttonblue with text color white-->
        </ScrollView>

    </RelativeLayout>
