<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:orientation="vertical"
    android:background="@color/header_bg">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/toolbar_shadow_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:gravity="center_vertical"
        >

        <ImageButton
            android:id="@+id/footer_home_ImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/header_bg"
            android:src="@drawable/home_text_icon"
            android:contentDescription="@string/home"/>

        <ImageButton
            android:id="@+id/footer_chat_ImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/header_bg"
            android:src="@drawable/contacts_text_icon"
            android:contentDescription="@string/chat"/>

        <ImageButton
            android:id="@+id/footer_contacts_ImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/header_bg"
            android:src="@drawable/chat_text_icon_blue"
            android:contentDescription="@string/contacts"/>

        <ImageButton
            android:id="@+id/footer_settings_ImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/header_bg"
            android:src="@drawable/setting_text_icon"
            android:contentDescription="@string/settings"/>
    </LinearLayout>


</LinearLayout>