<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/windowBackground">

    <!--Header-->
    <include
        android:id="@+id/header"
        layout="@layout/activity_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/metrics_58" />
    <View
        android:id="@+id/header_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/metrics_4"
        android:layout_below="@id/header"
        android:background="@drawable/toolbar_shadow_view"/>

    <!-- Login Form -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:layout_below="@id/header_shadow">

        <!--  Email Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SmallLabelTextStyle"
            android:text="@string/New_Password"/>

        <EditText
            android:id="@+id/newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="Enter New Password"
            style="@style/EditTextStyle"/>

        <!--  Password Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SmallLabelTextStyle"
            android:text="@string/Confirm_New_Password"/>

        <EditText
            android:id="@+id/confirmNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/Confirm_New_Password_Hint"
            style="@style/EditTextStyle"/>

        <!-- Login buttonblue -->
        <Button
            android:id="@+id/btnReset"
            android:background="@drawable/smallbluebutton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/btn_Reset"
            style="@style/Blue_button_small"
            android:onClick="next"/>

    </LinearLayout>

</RelativeLayout>