<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--Header-->
    <include
        android:id="@+id/header"
        layout="@layout/activity_header"
        android:layout_width="match_parent"
        android:layout_height="58dp" />

    <View
        android:id="@+id/header_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/metrics_4"
        android:layout_below="@+id/header"
        android:background="@drawable/toolbar_shadow_view" />

    <LinearLayout
        android:id="@+id/llProfileImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_shadow"
        android:background="@color/button_gray"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="-10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@mipmap/ic_default_profileimage" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:layout_below="@id/llProfileImage"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/llRegistrationFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llProfileImage"
            android:orientation="vertical"
            android:padding="10dip"
            android:weightSum="1">

            <!--  FirstName Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_Name"
                style="@style/SmallLabelTextStyle" />

            <!-- FirstName EditText-->
            <EditText
                android:id="@+id/fName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_hint_Required"
                android:singleLine="true"
                style="@style/EditTextStyle" />


            <!--  LastName Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_Name"
                android:layout_marginTop="5dp"
                style="@style/SmallLabelTextStyle" />

            <!--  LastName EditText -->
            <EditText
                android:id="@+id/lName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_hint_Required"
                android:singleLine="true"
                style="@style/EditTextStyle" />

            <!--  Gender Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_marginTop="5dp"
                style="@style/SmallLabelTextStyle" />

            <Spinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MySpinnerLook"
                android:text="@string/gender" />

            <!--  DateOfBirth Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dob"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/SmallLabelTextStyle" />

            <!--  DateOfBirth EditText -->
            <EditText
                android:id="@+id/dateOfBirth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_hint_Required"
                android:singleLine="true"
                android:focusable="false"
                android:textAppearance="@style/EditTextStyle" />

            <!-- Next button -->
            <Button
                android:id="@+id/btnNext"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/btn_Next"
                style="@style/Blue_button_small" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>


