<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:background="@color/header_bg">

    <!--Header Starts-->
    <ImageButton
        android:id="@+id/hcc_back_ImageButton"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"

        android:src="@drawable/ic_action_back"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_btn" />

    <ImageButton
        android:id="@+id/hcc_profile_ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@id/hcc_back_ImageButton"
        android:background="@drawable/shape_profile_picture"
        android:contentDescription="@string/profile_pic"
        android:onClick="previous_activity" />
    <TextView
        android:id="@+id/hcc_company_name_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/hcc_profile_ImageButton"
        android:text="Necto Technologies Pvt. Ltd."
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/hcc_user_name_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hcc_company_name_TextView"
        android:layout_marginLeft="1dp"
        android:layout_toRightOf="@id/hcc_profile_ImageButton"
        android:text="@string/user_name"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/hcc_last_seen_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_seen"
        android:textSize="10sp"
        android:layout_below="@id/hcc_user_name_TextView"
        android:layout_alignLeft="@id/hcc_user_name_TextView"
         />

    <ImageButton
        android:id="@+id/hcc_overflow_ImageButton"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_action_overflow"
        android:background="@android:color/transparent"
       />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/toolbar_shadow_view" />
    <!--Header Ends-->
</RelativeLayout>
